webadmin: Fix issues with splitter tabs
- Fixed issue where if the system tree was minimized the
  tab to expand would cover the 'new' button of the active
  main tab.
- Fixed issue where the tab of the splitter would show on
  top of a dialog if the dialog was dragged over it.

--- a/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabbedSplitLayout.css
+++ b/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabbedSplitLayout.css
@@ -3,7 +3,7 @@
     background: transparent;
     width: 8px;
     height: 16px;
-    z-index: 2;
+    z-index: 1;
     padding: 0px 0px 0px 0px;
     margin: 7px 0px 0px 0px;
     position: absolute;
